completed footer section and responsive it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="quicksand-font">
+    <marquee behavior="alternate" direction="right" class="marque"> Kindergarten, educational division, a supplement to elementary school intended to accommodate children between the ages of four and six years</marquee>
     <header class="margin">
         <nav class="nav-bar display-flex">
             <div class="navbar-icon display-flex">
@@ -21,14 +22,6 @@
                 <li class="nav-item"><a href="" class="nav-link violet">Admission</a></li>
 
             </ul>
-            <!-- <div class="hamburger" id="hamburger-menu">
-            </div>
-            <ul class="nav-menu" id="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#facilities">Facilities</a></li>
-                <li><a href="#Admission">admission</a></li>
-            </ul> -->
             <button class="btn-contact">Contact</button>
         </nav>
     </header>
@@ -45,7 +38,6 @@
             </div>
         </section>
         <section class="curriculum">
-            <!-- <img src="assets/bg.png" alt=""> -->
             <h3>Standard Curriculum</h3>
             <div class="curriculum-card">
                 <div class="card card1">
@@ -73,6 +65,15 @@
                     <button class="card3-btn">Read More</button>
                 </div>
             </div>
+            <div class="container">
+                <div class="circle left">
+                    <span>&lt</span>
+                </div>
+                <div class="circle right">
+                    <span>&gt</span>
+                </div>
+            </div>
+            <hr class="hr">
         </section>
         <section class="story">
             <h3>Our Stories</h3>
@@ -91,7 +92,7 @@
                     <div class="photo-collage">
                         <img src="assets/story-2.png" alt="">
                         <div class="col-margin">
-                            <button class="btn-primary">November 19, 2019</button>
+                            <button class="btn-primary btn-color1">November 19, 2019</button>
                             <h2>Find out if a school fits the
                             family’s needs</h2>
                         </div>
@@ -99,7 +100,7 @@
                     <div class="photo-collage">
                         <img src="assets/story-3.png" alt="">
                         <div class="col-margin">
-                            <button class="btn-primary">November 19, 2019</button>
+                            <button class="btn-primary btn-color2">November 19, 2019</button>
                             <h2>Summer math & literacy
                                 centres for kids</h2>
                         </div>
@@ -107,7 +108,7 @@
                     <div class="photo-collage">
                         <img src="assets/story-4.png" alt="">
                         <div class="col-margin">
-                            <button class="btn-primary">September 19, 2019</button>
+                            <button class="btn-primary btn-color1">September 19, 2019</button>
                             <h2>Classroom management
                             techniques for new tutors
                             Classroom management
@@ -117,13 +118,16 @@
                     <div class="photo-collage">
                         <img src="assets/story-5.png" alt="">
                         <div class="col-margin">
-                            <button class="btn-primary">July 19, 2019</button>
+                            <button class="btn-primary btn-color1">July 19, 2019</button>
                             <h2>Conversation rhymes
                             improve kids listening</h2>
                         </div>
                     </div>
                 </div>
                 
+            </div>
+            <div class="btn-story">
+                <button>View All</button>
             </div>
         </section>
     </main>
@@ -132,7 +136,7 @@
             <div class="kid-edu">
                 <div class="logo">
                     <img src="assets/logo.png" alt="">
-                    <h2>Kids <br>Education</h2>
+                    <h3>Kids <br>Education</h3>
                 </div>
                 <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
             </div>
