added menu icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids-school</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="quicksand-font">
@@ -23,6 +25,7 @@
 
             </ul>
             <button class="btn-contact">Contact</button>
+            <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
         </nav>
     </header>
     <main class="margin">
